# internal/delivery/rest/api/api.go
@@ -88,6 +88,7 @@ func (api *API) Register(r chi.Router, nrApp *newrelic.Application) {
 		r.Get("/statistics/vtubers/average-weight", api.handleGetVtuberAverageWeight)
 		r.Get("/statistics/vtubers/blood-type-count", api.handleGetVtuberBloodTypeCount)
 		r.Get("/statistics/vtubers/channel-type-count", api.handleGetVtuberChannelTypeCount)
+		r.Get("/statistics/vtubers/language-count", api.handleGetVtuberLanguageCount)
 		r.Get("/statistics/vtubers/gender-count", api.handleGetVtuberGenderCount)
 		r.Get("/statistics/vtubers/zodiac-count", api.handleGetVtuberZodiacCount)
 
